--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -27,9 +27,17 @@
 // 	  }
 // }
 
+.light1-color{
+	color: var(--text-1-dark);
+}
+.light2-color{
+	color: var(--text-2-light);
+}
+
 .accent-color{
 	color: var(--hover-color);
 }
+
 .hover-accent-color:hover{
 	color: var(--hover-color);
 }
@@ -91,10 +99,13 @@
 //   width: var(--size);
   width: 100%;
   aspect-ratio: 4 / 3;
+//   aspect-ratio: 3 / 3;
+//   aspect-ratio: 3 / 3;
   position: relative;
   border-radius: 2rem;
   overflow: hidden;
   color: #000;
+//   color: var(--hover-color);
   transform: translateZ(0);
 
 //   box-shadow:  5px 15px -5px #000000
@@ -110,6 +121,7 @@
 }
 
 .card__footer {
+  line-height: 1.1;
 //   padding: 0 1.5rem;
   padding: 1.5rem 10px;
   position: absolute;
@@ -126,10 +138,19 @@
   background: hsla(0, 0%, 17%, 0.5);
 //   background: hsla(41, 100%, 50%, 0.5); // previous
 //   backdrop-filter: blur(var(--blur));
-  backdrop-filter: blur(4px) brightness(1.17) contrast(159%) grayscale(70%);
+//   backdrop-filter: blur(4px) brightness(1.17) contrast(159%) grayscale(70%);
+  backdrop-filter: blur(5px) contrast(159%) ;
 //   backdrop-filter: blur(10px);
 //   filter: blur(var(--blur));
-  height: 30%;
+// background: rgb(0,0,0);
+// background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0.6110644941570378) 33%, rgba(255,255,255,0) 95%); 
+// background: rgba(0,0,0,1);
+// -webkit-mask-image: linear-gradient(to top, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+// mask-image: linear-gradient(to top, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+mask-image: linear-gradient(to top, rgba(0, 0, 0, 1) 80%, rgba(0, 0, 0, 0) 100%);
+background: linear-gradient(0deg, rgba(0,0,0,.9) 0%, rgba(0,0,0,0.6110644941570378) 51%, rgba(0,0,0,0) 100%); 
+//   height: 30%;
+  height: 35%;
   align-content: center;
 }
 
@@ -162,10 +183,13 @@
 	display: inline-block;
 }
 .card__date{
+	// color: var(--text-2-dark);
+	// color: var(--hover-color-soft);
 	position: absolute;
 	// color: white;
 	z-index: 0;
-	top: 0px;
+	// top: 0px;
+	bottom: 0px;
 	right: 0px;
 	padding-top: 10px;
 	// padding-left: 10px;
@@ -173,8 +197,8 @@
 	padding-right: 10px;
 	padding-bottom: 5px;
 	// background-colorgba(254, 146, 52, 0.377)234;
-	background-color: #fe92346e;
-	backdrop-filter: blur(calc(var(--blur) * 0.5));
+	// background-color: #fe92346e;
+	// backdrop-filter: blur(calc(var(--blur) * 0.5));
 	// border-radius: 0% 100% 0% 100% / 10% 0% 100% 90% ;
 
 	// height: 100%;
@@ -502,6 +526,7 @@ nav.categories ul li a{
 // }
 
 .article-tag{
+	position: relative;
 	border-radius: 999999px;
 	padding-left: 10px;
 	padding-right: 10px;
