--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -182,6 +182,17 @@ background: linear-gradient(0deg, rgba(0,0,0,.9) 0%, rgba(0,0,0,0.61106449415703
 .card__date svg{
 	display: inline-block;
 }
+
+.card__title{
+	line-height: 1.1;
+
+	position:absolute;
+	padding-left: 20px;
+	padding-right: 15px;
+	bottom: 20%;
+	font-size: 2em;
+}
+
 .card__date{
 	// color: var(--text-2-dark);
 	// color: var(--hover-color-soft);
