--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -139,7 +139,8 @@
 //   background: hsla(41, 100%, 50%, 0.5); // previous
 //   backdrop-filter: blur(var(--blur));
 //   backdrop-filter: blur(4px) brightness(1.17) contrast(159%) grayscale(70%);
-  backdrop-filter: blur(5px) contrast(159%) ;
+//   backdrop-filter: blur(5px) contrast(159%) ;
+backdrop-filter: blur(10px) contrast(159%) ;
 //   backdrop-filter: blur(10px);
 //   filter: blur(var(--blur));
 // background: rgb(0,0,0);
@@ -147,10 +148,15 @@
 // background: rgba(0,0,0,1);
 // -webkit-mask-image: linear-gradient(to top, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
 // mask-image: linear-gradient(to top, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
-mask-image: linear-gradient(to top, rgba(0, 0, 0, 1) 80%, rgba(0, 0, 0, 0) 100%);
-background: linear-gradient(0deg, rgba(0,0,0,.9) 0%, rgba(0,0,0,0.6110644941570378) 51%, rgba(0,0,0,0) 100%); 
+// mask-image: linear-gradient(to top, rgba(0, 0, 0, 1) 80%, rgba(0, 0, 0, 0) 100%);
+// mask-image: linear-gradient(to top, rgba(0, 0, 0, 1) 30%, rgba(0, 0, 0, 0) 100%);
+mask-image: linear-gradient(to top, rgba(0, 0, 0, 1) 40%, rgba(0, 0, 0, 0) 100%);
+// background: linear-gradient(0deg, rgba(0,0,0,.9) 0%, rgba(0,0,0,0.6110644941570378) 51%, rgba(0,0,0,0) 100%); 
+background: linear-gradient(0deg, rgba(0,0,0,1.0) 0%, rgba(0,0,0,0.6110644941570378) 20%, rgba(0,0,0,0) 100%); 
 //   height: 30%;
-  height: 35%;
+//   height: 35%;
+//   height: 45%;
+  height: 65%;
   align-content: center;
 }
 
