--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -98,7 +98,8 @@
   --size: clamp(400px, 50vmin, 600px);
 //   width: var(--size);
   width: 100%;
-  aspect-ratio: 4 / 3;
+  aspect-ratio: 4 / 3; // previous
+//   aspect-ratio: 4 / 5;
 //   aspect-ratio: 3 / 3;
 //   aspect-ratio: 3 / 3;
   position: relative;
@@ -109,6 +110,17 @@
   transform: translateZ(0);
 
 //   box-shadow:  5px 15px -5px #000000
+
+box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+// transition: all 200ms;
+// transition: all 1200ms;
+// transition: all 500ms;
+transition: all 300ms;
+}
+
+.card-article:hover {
+	transform: translateY(-10px);
+	box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
 .card__img {
@@ -140,7 +152,7 @@
 //   backdrop-filter: blur(var(--blur));
 //   backdrop-filter: blur(4px) brightness(1.17) contrast(159%) grayscale(70%);
 //   backdrop-filter: blur(5px) contrast(159%) ;
-backdrop-filter: blur(10px) contrast(159%) ;
+  backdrop-filter: blur(10px) contrast(159%) ;
 //   backdrop-filter: blur(10px);
 //   filter: blur(var(--blur));
 // background: rgb(0,0,0);
