--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,4 +1,5 @@
 <header>
+  {{ $current_page := . }}
   {{ with .Parent }}
   <a class="btn btn-square" href="{{ .RelPermalink | default .Site.Home.RelPermalink }}" title="{{ .Title }}">
     <svg width="24" height="24" data-slot="icon" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
@@ -7,6 +8,7 @@
   </a>
   {{/*  REFACTOR breadcrumbs Lo dejo aquí? */}}
   {{ partial "breadcrumbs.html" . }}
+  {{ partial "languages-buttons.html" $current_page }}
   {{ else }}
     <a class="btn" href="{{ .Site.Home.RelPermalink }}">
       {{/*  DEXTER SVG ICON  */}}
