--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -890,3 +890,10 @@ hgroup.articles-content ul ul ul ul li{
 	padding-right: 10px;
 	padding-top: 10px;
 }
+
+.language-switcher{
+	position: absolute;
+	right: 60px;
+	// top: 19px;
+	// bottom: 10px;
+}
