fix getting article_cover

--- a/layouts/partials/get-article-card-cover.html
+++ b/layouts/partials/get-article-card-cover.html
@@ -14,9 +14,28 @@ it CAN has its own resources, and will look automatically for an image with the 
 {{ $cover_image_path := "" }}
 {{ $DEFAULT_IMAGE_PATH := "/images/articles/default-article-cover.png" }}
 
-
+{{/*  REFACTOR delete comments  */}}
 {{ if .Params.article_cover }}
-	{{ $cover_image_path = .Params.article_cover }}
+	{{/*  PREVIOUS  */}}
+	{{/*  {{ $cover_image_path = .Params.article_cover }}  */}}
+
+	{{/*  When an article is not a leaf bundle  */}}
+	{{ $default_lang_path := .Site.Sites.Default.Home.RelPermalink }}
+	{{/*  {{ $cover_image_path = (printf "%s%s/%s" $default_lang_path .Section .Params.article_cover) }}   */}}
+	{{ $cover_image_path = (path.Join $default_lang_path .Section .Params.article_cover) }} 
+
+	{{/*  {{ $cover_image_path = (absLangURL .Params.article_cover) }}  */}}
+	{{/*  {{ $cover_image_path = printf (relLangURL  .Params.article_cover) }}  */}}
+	{{/*  {{ $cover_image_path = printf "%s%s/%s" (relLangURL "") .Section .Params.article_cover}}  */}}
+	{{/*  NOW  */}}
+	{{/*  {{ $cover_image_path = printf "/%s/%s/%s" (.Site.Params.default_language) .Section .Params.article_cover}}  */}}
+	{{/*  {{ $cover_image_path = printf "/%s/%s/%s" (site.LanguagePrefix | absURL) .Section .Params.article_cover}}  */}}
+	{{/*  {{ $cover_image_path = (site.LanguagePrefix | absURL) }}  */}}
+	{{/*  {{ $cover_image_path = (.Site.Sites.Default.Home.RelPermalink) }}  */}}
+
+
+
+	{{/*  {{absLangURL "tags/"}}{{$tag}}  */}}
 	{{/*  {{ $cover_image_path = (printf "%s%s" .RelPermalink .Params.article_cover) }}  */}}
 	{{/*  {{ $cover_image_path = (printf "%s/%s/%s" site.Language.Lang .Section .Params.article_cover) }}  */}}
 	
