debug class (green text)

--- a/layouts/partials/debug.html
+++ b/layouts/partials/debug.html
@@ -1,4 +1,5 @@
 {{/*  Partial for debugging  */}}
+<div class="debug">
 <h1 class="accent-color super-bold">---------------------- [Debug Code] ----------------------</h1>
 <pre class="super-bold">❗ Don't forget to turn 'false' the `is_debug` flag in `hugo.toml` ❗</pre>
 {{$template_type := "list.html"}}
@@ -58,3 +59,4 @@
 
 <hr class="full-separator">
 <hr class="full-separator">
+</div>
