--- a/layouts/tags/list.html
+++ b/layouts/tags/list.html
@@ -1,21 +1,25 @@
 {{/*  TODO tags list.html  */}}
 {{ define "main" }}
-    {{/*  {{ partial "title.html" . }}  */}}
+  {{/*  {{ partial "title.html" . }}  */}}
   <hgroup>
-    <h1 class="accent-color">#{{ .Title }}</h1>
+    {{/*  Show total articles in tag's title/name  */}}
+    {{$tag_count := ""}}
+    {{ if eq .Kind "taxonomy" }}
+      {{$tag_count = len .Site.Taxonomies.tags }}
+    {{ else if eq .Kind "term" }}
+      {{ $articles_with_tag := where .Site.RegularPages "Params.tags" "intersect" (slice (.Title | lower)) }}
+      {{$tag_count = len $articles_with_tag }}
+    {{ end }}
+    <h1 class="accent-color">#{{ .Title }} <sup class="text2-color">{{$tag_count}}</sup></h1>
   </hgroup>
 
   {{/*  section.galleries is displayed as grid  */}}
   <section class="galleries">
     {{/*  <section>  */}}
-      {{ if eq .Kind "term"}}
+    {{ if eq .Kind "term"}}
       {{/*  ARTICLES in a CERTAIN TAG  */}}
       {{ range where .Pages "Params.private" "ne" true }}
       {{/*  {{ partial "album-card.html" . }}  */}}
-      {{ if .Site.Params.is_debug }}
-        <pre>.Section = {{.Section}}</pre>
-        <pre>traducida? = {{.IsTranslated}}</pre>
-      {{ end }}
         {{ partial "article-card.html" . }}
         {{/*  {{ partial "articles/article-card.html" . }}  */}}
       {{ end }}
@@ -27,18 +31,18 @@
       {{ end }}  */}}
 
 
-      {{range $name, $taxonomy := .Site.Taxonomies.tags}} 
-        {{ $cnt := .Count }}
-        {{ with $.Site.GetPage (printf "/tags/%s" $name) }}
-          {{/*  <div class="tagbutton">  */}}
-          {{/*  <a class="article-tag" href={{ .RelPermalink }} title="All pages with tag <i>{{$name}}</i>">{{$name}}</a>  */}}
-          {{/*  <sup>{{$cnt}}</sup>  */}}
+        {{range $name, $taxonomy := .Site.Taxonomies.tags}} 
+          {{ $cnt := .Count }}
+          {{ with $.Site.GetPage (printf "/tags/%s" $name) }}
+            {{/*  <div class="tagbutton">  */}}
+            {{/*  <a class="article-tag" href={{ .RelPermalink }} title="All pages with tag <i>{{$name}}</i>">{{$name}}</a>  */}}
+            {{/*  <sup>{{$cnt}}</sup>  */}}
             <a class="article-tag big-article-tag" href={{ .RelPermalink }} title="All pages with tag <i>{{$name}}</i>"><span class="center-text">{{$name}}<sup>{{$cnt}}</sup></span></a>
-          {{/*  </div>  */}}
-        {{end}}
+            {{/*  </div>  */}}
+          {{end}}
       {{end}}
 
-      {{ end }}
+    {{ end }}
       
       {{ .Content | markdownify }}
     </section>
