text1-color classes

--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -31,6 +31,12 @@
 	color: greenyellow;
 }
 
+.text1-color{
+	color: var(--text-1);
+}
+.text2-color{
+	color: var(--text-2);
+}
 
 .light1-color{
 	color: var(--text-1-dark);
