--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -79,6 +79,14 @@
 	font-weight: 900;
 }
 
+sup.tag-count{
+	font-weight: 900;
+	font-size: .6em;
+	color: var(--text-2);
+	margin-left: 3px;
+	margin-bottom: 10px;
+}
+
 .article-card{
 	padding: 15px 15px;
 	border-radius: 15px;
