commented tag-cloud.html partial

--- a/layouts/tags/list.html
+++ b/layouts/tags/list.html
@@ -46,5 +46,5 @@
       
       {{ .Content | markdownify }}
     </section>
-    {{ partial "tag-cloud.html" . }}
+    {{/*  {{ partial "tag-cloud.html" . }}  */}}
 {{ end }}
