--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -615,12 +615,27 @@ nav.categories ul li a{
     // background-color: #f3f3f3; /* Optional: Light background */
 
 	border: 2px solid var(--border);
+
+	-webkit-box-shadow: 0px 3px 3px -3px rgba(0,0,0,0.75);
+	-moz-box-shadow: 0px 3px 3px -3px rgba(0,0,0,0.75);
+	box-shadow: 0px 3px 3px -3px rgba(0,0,0,0.75);
+
+	transition: all 500ms;
+
+
 	&:hover {
 		color: var(--hover-color);
 		border: 2px solid var(--hover-color);
 		// font-weight: bold;
 		// text-decoration: underline;
 		cursor: pointer;
+	// padding-left: 20px;
+	// padding-bottom: 20px;
+	-webkit-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);
+	-moz-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);
+	box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);
+
+		transition-duration: 40ms;
 	}
 }
 
