--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -46,6 +46,7 @@
       {{ .Site.Title }}
     </a>
   {{ end }}
+  {{ partial "theme-button.html" . }}
   {{ partial "languages-buttons.html" . }}
   {{ if site.Menus.main }}
     <ul>
