added shadows to card__title

--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -262,6 +262,7 @@ background: linear-gradient(0deg, rgba(0,0,0,1.0) 0%, rgba(0,0,0,0.6110644941570
 	padding-right: 15px;
 	bottom: 20%;
 	font-size: 2em;
+	text-shadow: 0px 3px 4px #000;
 }
 
 .card__date{
