--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -991,3 +991,243 @@ hgroup.articles-content ul ul ul ul li{
 #menu-toggle:hover, .btn-square:hover{
 	color: var(--hover-color);
 }
+
+
+/*#region Fancy animations*/
+.shadow-dance-text {
+    // font-size: 4rem;
+    // color: #fff;
+
+	--distance: calc(var(--distance-to-mid, 5px));
+	--distance2: calc(var(--distance-to-mid, 5px)*2);
+	
+    text-shadow: 5px 5px 0 #ff005e, 10px 10px 0 #00d4ff;
+    // animation: shadow-dance 2s ease-in-out infinite;
+    animation: shadow-dance2 2s ease-in-out infinite;
+    // animation: shadow-dance 2s linear infinite;
+	animation-duration: 1s;
+	animation-delay: var(--animation-delay,0s);
+
+	&:hover{
+		animation-play-state: paused;
+	}
+}
+
+@keyframes shadow-dance {
+    0%, 100% {
+        text-shadow: 5px 5px 0 #ff005e, 10px 10px 0 #00d4ff;
+    }
+    50% {
+        text-shadow: -5px -5px 0 #00d4ff, -10px -10px 0 #ff005e;
+        // text-shadow: -5px -5px 10px #00d4ff, -10px -10px 0 #ff005e;
+    }
+}
+
+@keyframes shadow-dance2 {
+    0%, 100% {
+
+        // text-shadow: 5px 5px 0 #ff005e, 10px 10px 0 #00d4ff;
+        text-shadow: var(--distance) var(--distance) 50px #ff005e, var(--distance2) var(--distance2) 0 #00d4ff;
+    }
+    50% {
+        // text-shadow: -5px -5px 0 #00d4ff, -10px -10px 0 #ff005e;
+        text-shadow: calc(var(--distance)*-1) calc(var(--distance)*-1) 0 #00d4ff, calc(var(--distance2)*-1) calc(var(--distance2)*-1) 0 #ff005e;
+        // text-shadow: -5px -5px 10px #00d4ff, -10px -10px 0 #ff005e;
+    }
+}
+
+@keyframes shadow-dance-glitch {
+    0%, 100% {
+        text-shadow: 5px 5px 0 #ff005e, 10px 10px 0 #00d4ff;
+    }
+	19% {
+		text-shadow: 5px -14px 0 #00d4ff, -5px 10px 0 #ff005e;
+	}
+    20% {
+        text-shadow: 5px -51px 0 #00d4ff, -5px 10px 0 #ff005e;
+	}
+    21% {
+        text-shadow: 5px -14px 0 #00d4ff, -5px 10px 0 #ff005e;
+	}
+    50% {
+        text-shadow: -5px -5px 0 #00d4ff, -10px -10px 0 #ff005e;
+        // text-shadow: -5px -5px 10px #00d4ff, -10px -10px 0 #ff005e;
+    }
+}
+
+
+
+//////////////////
+.wave-text span {
+    display: inline-block;
+    font-size: 4rem;
+    // animation: wave 2s ease-in-out infinite;
+    // animation: wave var(--wave-time, 2s) ease-in-out infinite;
+    // animation: wave2 var(--wave-time, 2s) ease-in-out infinite;
+    animation: rota var(--wave-rotation-time, 2s) ease-in-out infinite alternate ;
+    // animation: rota var(--wave-rotation-time, 2s) ease-in-out infinite alternate, wave 2s ease-in-out infinite;
+    // -webkit-animation: rota var(--wave-rotation-time, 2s) ease-in-out infinite alternate, wave 2s ease-in-out infinite;
+}
+// .wave-text span span{
+//     display: inline-block;
+//     font-size: 4rem;
+//     // animation: wave 2s ease-in-out infinite;
+//     animation: wave var(--wave-time, 2s) ease-in-out infinite;
+//     // animation: wave2 var(--wave-time, 2s) ease-in-out infinite;
+//     // animation: rota var(--wave-rotation-time, 2s) ease-in-out infinite alternate ;
+//     // animation: rota var(--wave-rotation-time, 2s) ease-in-out infinite alternate, wave 2s ease-in-out infinite;
+//     // -webkit-animation: rota var(--wave-rotation-time, 2s) ease-in-out infinite alternate, wave 2s ease-in-out infinite;
+// }
+
+// .wave-text span:nth-child(1) {
+//     animation-delay: 0s;
+// }
+// .wave-text span:nth-child(2) {
+//     animation-delay: 0.2s;
+// }
+// .wave-text span:nth-child(3) {
+//     animation-delay: 0.4s;
+// }
+// .wave-text span:nth-child(4) {
+//     animation-delay: 0.6s;
+// }
+
+// .wave-text span:nth-child(5), span:nth-child(7) {
+// 	color: red;
+//   }
+
+@keyframes rota {
+	0%{
+		transform: rotate(var(--wave-rotation, -20deg));
+	}
+	100% {
+		transform: rotate(var(--wave-rotation, 20deg));
+    }
+	// 0%, 100% {
+    //     transform: rotate(0deg);
+    // }
+	// 33% {
+    //     transform: rotate(var(--wave-rotation, 20deg));
+    // }
+	// 66% {
+	// 	transform: rotate(calc(var(--wave-rotation, 20deg)*-1.0));
+    // }
+}
+
+@keyframes wave {
+    // 0%, 100% {
+    //     // transform: translateY(0);
+    //     transform: translateY(0) rotate(-20deg);
+    // }
+    0%, 100% {
+        transform: translateY(0);
+        // transform: translateY(0) rotate(-20deg);
+    }
+    // 25% {
+    //     transform: translateY(var(--y-wave-translate,-50px));
+	// }
+    50% {
+        // transform: translateY(-20px);
+        // transform: translateY(var(--y-translate));
+        transform: translateY(var(--y-wave-translate,-20px));
+        // transform: translateY(var(--y-wave-translate,-20px)) rotate(20deg);
+        // transform: translateY(calc(-20px*var(--is-active, 0)));
+        // transform: translateY(calc(-20px*var(--is-active)));
+        // transform: translateY(calc(-20px+var(--is-active)));
+    }
+}
+
+
+@keyframes wave2 {
+    // 0%, 100% {
+    //     // transform: translateY(0);
+    //     transform: translateY(0) rotate(-20deg);
+    // }
+    0%, 100%{
+        transform: translateY(0px) rotate(0deg);
+	}
+    25% {
+        transform: translateY(var(--y-wave-translate,-20px)) rotate(var(--wave-rotation, 20deg));
+	}
+
+    50% {
+        // transform: translateY(-20px);
+        // transform: translateY(var(--y-translate));
+        // transform: translateY(var(--y-wave-translate,-20px));
+        transform: translateY(0px) rotate(0deg);
+        // transform: translateY(calc(-20px*var(--is-active, 0)));
+        // transform: translateY(calc(-20px*var(--is-active)));
+        // transform: translateY(calc(-20px+var(--is-active)));
+    }
+	75% {
+        transform: translateY(var(--y-wave-translate,-20px)) rotate(calc(var(--wave-rotation, 20deg)*-1.0));
+	}
+	// 100% {
+    //     // transform: translateY(0);
+    //     transform: translateY(0) rotate(-20deg);
+    // }
+}
+
+.wave-text span{
+	// color: hsl(323, 100%, 50%);
+	// background: hsl(50, 80, 40);
+	// animation-delay: calc((var(--n) - 1) * 0.21s);
+	// animation-delay: calc((var(--n) - 1) * 0.1s);
+	// animation-delay: calc((var(--n) - 1) * 1.0s);
+	// animation-delay: var(--anim-delay);
+	// animation-delay: calc((var(--anim-delay))*.2s);
+	animation-delay: calc((var(--anim-delay))*.1s * var(--is-active));
+	// animation-play-state: paused;
+	--is-active: 1;
+	&:hover{
+		--is-active: 0;
+		// --is-active: 1s;
+		// --is-active: 1px;
+		// --is-active: 1px;
+		color: pink;
+		// animation-play-state: running;
+	}
+}
+
+// @for $i from 1 through 1000 {
+// 	.wave-text span:nth-child(#{$i}) {
+// 	  --n: #{$i};
+// 	}
+//   }
+
+
+///////////////////////////
+
+
+//////////////////////////////////////////////////////
+//////////////////////////////////////////////////////
+//////////////////////////////////////////////////////
+//////////////////////////////////////////////////////
+
+/*#endregion Fancy animations*/
+
+.rotate-animation{
+	// color: pink;
+	display: inline-block;
+	// animation: rotate-anim 2s ease-in-out infinite;
+	// animation: rotate-anim 2s cubic-bezier(0,.76,.27,1.56) infinite;
+	animation: rotate-face-anim 3.5s cubic-bezier(0,.89,0,.99) infinite;
+	
+}
+
+@keyframes rotate-face-anim {
+    0%, 100% {
+		// transform: rotate(180deg);
+		transform: translateX(100px) rotate(180deg);
+        // text-shadow: 5px 5px 0 #ff005e, 10px 10px 0 #00d4ff;
+        // text-shadow: var(--distance) var(--distance) 50px #ff005e, var(--distance2) var(--distance2) 0 #00d4ff;
+    }
+    50% {
+		// transform: rotate(0deg);
+		// transform: translateX(-100px) rotate(0deg);
+		transform: translateX(-100px) translateY(-10px) rotate(0deg);
+        // text-shadow: -5px -5px 0 #00d4ff, -10px -10px 0 #ff005e;
+        // text-shadow: calc(var(--distance)*-1) calc(var(--distance)*-1) 0 #00d4ff, calc(var(--distance2)*-1) calc(var(--distance2)*-1) 0 #ff005e;
+        // text-shadow: -5px -5px 10px #00d4ff, -10px -10px 0 #ff005e;
+    }
+}
