--- a/layouts/articles/single.html
+++ b/layouts/articles/single.html
@@ -49,9 +49,9 @@
 
     {{/*  TAGS  */}}
     <div id="tags-footer">
-    <hr class="solid-separator">
-    <h3 class="uppercase">ALL TAGS</h3> 
-    {{/*  <div class="article-tags">  */}}
+      <hr class="solid-separator">
+      <h3 class="uppercase">{{T "allTags"}}</h3> 
+      {{/*  <div class="article-tags">  */}}
       {{ partial "all-tags.html" $context }}
     </div>
 {{ end }}
