--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -552,11 +552,12 @@ blockquote {
 
 
 .card{
-	transition: all 300ms;
+	transition: all 200ms;
 
-	& img{
-
-		transition: all 500ms;
+	& figure img{
+box-shadow: 0px 3px 3px 0px rgba(0,0,0,0.75);
+		// margin-top: 100px;
+		transition: all 200ms;
 	}
 
 	&:hover {
@@ -564,17 +565,17 @@ blockquote {
 		// transition: transform 200ms;
 		// transition: box-shadow 20000ms;
 		// transform: translateY(-10px);
-		// transform: translateY(-5px);
+		transform: translateY(-5px);
 
 	}
 
 
 	&:hover img, &:hover img:hover{
 		// color:pink;
-		// transform: translateX(10px);
+		// transform: translateY(-10px);
 
 		box-shadow: 0px 5px 9px 0px rgba(0,0,0,0.75);
-		transition: box-shadow 300ms ease-in-out; // Slow box-shadow transition
+		transition: box-shadow 100ms ease-in-out; // Slow box-shadow transition
 	}
 
 }
