--- a/layouts/partials/languages-buttons.html
+++ b/layouts/partials/languages-buttons.html
@@ -1,6 +1,6 @@
 {{$current_language := .Site.Language | lower}}
 {{ with .Translations }}
-<nav class="language-switcher light2-color">
+<nav class="header-buttons language-switcher light2-color">
     {{/*  <span class="super-bold">{{$current_language}}</span> <span>/</span>  */}}
     {{ range . }}
     {{/*  <pre>{{.}}</pre>  */}}
